--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -21,7 +21,7 @@ body {
 }
 
 .bold {
-	font-weight: bold; 
+  font-weight: bold; 
 }
 
 /*
@@ -48,4 +48,8 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display:         flex;
+}
+
+.space-bottom {
+  padding-bottom: 1em;
 }
